# manul

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  meson.build  meson_options.txt
cmake/: glib-resource-compiler.cmake
src/: dnd.gresource.xml  dnd.ui  main.c  manul-base-editor.c  manul-base-editor.h  manul-dnd.c  manul-dnd.h  manul-drag.c  manul-drag.h  manul-draw.c  manul-draw.h  manul-plugin.c  manul-plugin.h  manul-pluin-view.h  manul-source-view.c  manul-source-view.h  manul-workbench.c  manul-workbench.h  manul-workbench.ui  manul-workspace.c  manul-workspace.h  manul-workspace.ui  manulapp.c  manulapp.h  manulapp.ui  menu.ui  meson.build  tfetextview.c  tfetextview.h  ui_resources.c
src/device/: api.c  protocol.h
